# VirtualTransparencyProject

./: .gitignore  CMakeLists.txt  README.md
include/: Alignment.h  BenchmarkSource.h  Common.h  CpuOpenGlReconstructor.h  HeadlessContext.h  InputSource.h  RealSenseSource.h  Reconstructor.h  Viewer.h  shader_m.h
include/glad/: glad.h
shaders/: display.frag
src/: Alignment.cpp  BenchmarkSource.cpp  CpuOpenGlReconstructor.cpp  InputSource.cpp  RealSenseSource.cpp  Reconstructor.cpp  Viewer.cpp  gpu_kernel.cu  gpu_kernel.h  main.cpp  main_bench.cpp  main_prod.cpp
